# exodus-ia-firewall

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  exodus.manifest.template  pyproject.toml
docs/: ARQUITECTURA.md  ESTRUCTURA.md  FUNDAMENTOS.md  ROADMAP.md  TEE.md  threat-model.md
docs/demo/: echo_upstream.py  firewall.tape  request.json  selftest.tape  verify.tape
esp/: ARQUITECTURA.md  ESTRUCTURA.md  EXODUS-2.0.md  FUNDAMENTOS.md  README.md  exodus-paper.md  threat-model.md
paper/: exodus-paper.md  references.bib
paper/prior-art/: SOURCES.md
scripts/: exodus-statusline.sh  provision-sgx-server.sh
src/exodus/: attest.py  cli.py  inspectlog.py  mcp_server.py  selftest.py  tlsbind.py  verify.py
src/exodus/audit/: log.py
src/exodus/classify/: detectors.py  sensitivity.py
src/exodus/local_model/: embedded.py  runtime.py
src/exodus/policy/: policy.example.yaml  policy.py
src/exodus/proxy/: anthropic_client.py  server.py
src/exodus/transform/: abstract.py  local_pass.py  pipeline.py  pseudonymize.py
tests/: test_attest.py  test_audit.py  test_detectors_extended.py  test_embedded_runtime.py  test_firewall.py  test_inspect.py  test_local_model.py  test_mcp.py  test_no_restore.py  test_policy.py  test_proxy.py  test_selftest.py  test_smoke.py  test_verify.py
